--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,10 @@
 ---
 stages:
-  - preflight
+  - checks
   - test
   - push
 
 variables:
-  CI_REGISTRY_URL: registry-test
-  CI_REGISTRY_USER: CI
-  REGISTRY_IMG_TAG: ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}/${GITLAB_USER}/docker-molecule_debian11:latest
-  DOCKERHUB_TAG: ${DOCKERHUB_USER}/ansible_molecule_test_images:debian11
-  DOCKERHUB_USER: lotusnoir
   GITHUB_USER: lotusnoir
 
 
@@ -17,73 +12,60 @@ variables:
 # PREFLIGHT
 ##################################################
 yamllint:
-  stage: preflight
+  stage: checks
   image: sdesbure/yamllint
   before_script:
     - yamllint --version
   script:
     - yamllint .
 
-hadolint:
-  stage: preflight
-  image: hadolint/hadolint:latest-debian
-  before_script:
-    - hadolint --version
+ansible-lint:
+  stage: checks
+  image: lotusnoir/ansible_play
   script:
-    - hadolint Dockerfile
+    - ansible-lint .
 
-
-##################################################
-# TEST BUILD
-##################################################
-test_build:
+######################################################
+# RUN ROLE ON DIFFERENTS OS
+######################################################
+debian11:
   stage: test
-  image: docker:latest
-  needs: ["yamllint", "hadolint"]
-  services:
-    - docker:dind
+  needs:
+    - yamllint
+    - ansible-lint
+  image:
+    name: lotusnoir/ansible_molecule_test_images:debian11
+    entrypoint: [""]
+  before_script:
+    - ansible --version
   script:
-    - docker build -t test-build .
-    - docker stop test-container && docker rm test-container
-    - docker run -d --name=test-container --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
-    - docker exec test-container systemctl --version
-    - docker stop test-container && docker rm test-container
+    - ansible-galaxy install -r requirements.yml
+    - cd ..
+    - ansible-playbook ansible-apps_adminer/playbook.yml
+
+
+######################################################
+# RUN MOLECULE FOR FULL TEST SCENARIO
+######################################################
+molecule:
+  stage: test
+  needs:
+    - debian11
+  image: lotusnoir/molecule_play
+  before_script:
+    - molecule --version
+  script:
+    - molecule test
 
 
 ##################################################
-# PUSH CODE AND IMAGE
+# PUSH CODE WHEN ALL TEST OK
 ##################################################
-push_img_on_gitlab:
-  stage: push
-  image: docker:latest
-  needs: ["test_build"]
-  services:
-    - docker:dind
-  before_script:
-    - docker info
-    - echo "${CI_REGISTRY_USER} ${CI_REGISTRY_TOKEN} ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}"
-    - docker login -u "${CI_REGISTRY_USER}" -p "${CI_REGISTRY_TOKEN}" "${CI_REGISTRY_URL}.${COMPANY_DOMAIN}"
-  script:
-    - docker build -t "${REGISTRY_IMG_TAG}" .
-    - docker push "${REGISTRY_IMG_TAG}"
-
-push_img_on_dockerhub:
-  stage: push
-  image: docker:latest
-  needs: ["test_build"]
-  services:
-    - docker:dind
-  before_script:
-    - docker info
-    - docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_TOKEN}"
-  script:
-    - docker build -t "${DOCKERHUB_TAG}" .
-    - docker push "${DOCKERHUB_TAG}"
-
 push_src_on_github:
   stage: push
   image: alpine:latest
-  needs: ["test_build"]
+  needs:
+    - molecule
   before_script:
     - apk add git openssh-client
     - eval $(ssh-agent -s)
@@ -100,5 +82,5 @@ push_src_on_github:
     - cp -r . /tmp/docker-molecule_debian11/
     - cd /tmp/docker-molecule_debian11
     - git add -A
-    - git commit -m "adding features" || echo "No changes, nothing to commit!"
+    - git commit -m "fix" || echo "No changes, nothing to commit!"
     - git push
