--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,71 +1,89 @@
 ---
 stages:
-  - checks
+  - check
   - test
   - push
 
 variables:
+  CI_REGISTRY_URL: registry-test
+  CI_REGISTRY_USER: CI
+  REGISTRY_IMG_TAG: ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}/${GITLAB_USER}/docker-molecule_debian11:latest
+  DOCKERHUB_TAG: ${DOCKERHUB_USER}/ansible_molecule_test_images:debian11
+  DOCKERHUB_USER: lotusnoir
   GITHUB_USER: lotusnoir
 
 
 ##################################################
-# PREFLIGHT
+# CHECKS
 ##################################################
 yamllint:
-  stage: checks
+  stage: check
   image: sdesbure/yamllint
   before_script:
     - yamllint --version
   script:
     - yamllint .
 
-ansible-lint:
-  stage: checks
-  image: lotusnoir/ansible_play
-  script:
-    - ansible-lint .
-
-######################################################
-# RUN ROLE ON DIFFERENTS OS
-######################################################
-debian11:
-  stage: test
-  needs:
-    - yamllint
-    - ansible-lint
-  image:
-    name: lotusnoir/ansible_molecule_test_images:debian11
-    entrypoint: [""]
+hadolint:
+  stage: check
+  image: hadolint/hadolint:latest-debian
   before_script:
-    - ansible --version
+    - hadolint --version
   script:
-    - ansible-galaxy install -r requirements.yml
-    - cd ..
-    - ansible-playbook ansible-apps_adminer/playbook.yml
-
-
-######################################################
-# RUN MOLECULE FOR FULL TEST SCENARIO
-######################################################
-molecule:
-  stage: test
-  needs:
-    - debian11
-  image: lotusnoir/molecule_play
-  before_script:
-    - molecule --version
-  script:
-    - molecule test
+    - hadolint Dockerfile
 
 
 ##################################################
-# PUSH CODE WHEN ALL TEST OK
+# TEST BUILD
 ##################################################
+test_build:
+  stage: test
+  image: docker:latest
+  needs: ["yamllint", "hadolint"]
+  services:
+    - docker:dind
+  script:
+    - docker build -t test-build .
+    - docker stop test-container && docker rm test-container
+    - docker run -d --name=test-container --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
+    - docker exec test-container systemctl --version
+    - docker stop test-container && docker rm test-container
+
+
+##################################################
+# PUSH CODE AND IMAGE
+##################################################
+push_img_on_gitlab:
+  stage: push
+  image: docker:latest
+  needs: ["test_build"]
+  services:
+    - docker:dind
+  before_script:
+    - docker info
+    - echo "${CI_REGISTRY_USER} ${CI_REGISTRY_TOKEN} ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}"
+    - docker login -u "${CI_REGISTRY_USER}" -p "${CI_REGISTRY_TOKEN}" "${CI_REGISTRY_URL}.${COMPANY_DOMAIN}"
+  script:
+    - docker build -t "${REGISTRY_IMG_TAG}" .
+    - docker push "${REGISTRY_IMG_TAG}"
+
+push_img_on_dockerhub:
+  stage: push
+  image: docker:latest
+  needs: ["test_build"]
+  services:
+    - docker:dind
+  before_script:
+    - docker info
+    - docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_TOKEN}"
+  script:
+    - docker build -t "${DOCKERHUB_TAG}" .
+    - docker push "${DOCKERHUB_TAG}"
+
 push_src_on_github:
   stage: push
   image: alpine:latest
-  needs:
-    - molecule
+  needs: ["test_build"]
   before_script:
     - apk add git openssh-client
     - eval $(ssh-agent -s)
@@ -76,11 +94,12 @@ push_src_on_github:
     - git config --global user.email "${GITHUB_USER_EMAIL}"
     - git config --global user.name "${GITHUB_USER}"
     - git config --global init.defaultBranch main
+    - COMMENT=$(git log -1 --pretty=%B | head -1)
   script:
     - git clone git@github.com:${GITHUB_USER}/docker-molecule_debian11.git /tmp/docker-molecule_debian11
     - rm -rf .git
     - cp -r . /tmp/docker-molecule_debian11/
     - cd /tmp/docker-molecule_debian11
     - git add -A
-    - git commit -m "fix" || echo "No changes, nothing to commit!"
+    - git commit -m "${COMMENT}" || echo "No changes, nothing to commit!"
     - git push
