--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 variables:
   CI_REGISTRY_URL: registry-test
   CI_REGISTRY_USER: CI
-  REGISTRY_IMG_TAG: ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}/${GITLAB_USER}/docker-molecule_debian11:latest
+  REGISTRY_IMG_TAG: ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}/docker_images/docker-molecule_debian11:latest
   DOCKERHUB_TAG: ${DOCKERHUB_USER}/ansible_molecule_test_images:debian11
   DOCKERHUB_USER: lotusnoir
   GITHUB_USER: lotusnoir
@@ -44,10 +44,10 @@ test_build:
     - docker:dind
   script:
     - docker build -t test-build .
-    - docker stop test-container && docker rm test-container
-    - docker run -d --name=test-container --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
-    - docker exec test-container systemctl --version
-    - docker stop test-container && docker rm test-container
+    - docker stop test-debian11 && docker rm test-debian11
+    - docker run -d --name=test-debian11 --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
+    - docker exec test-debian11 systemctl --version
+    - docker stop test-debian11 && docker rm test-debian11
 
 
 ##################################################
