--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,10 +43,9 @@ test_build:
   services:
     - docker:dind
   script:
-    - docker build -t build-debian11 .
+    - docker build -t test-build .
     - docker stop test-debian11 || true && docker rm test-debian11 || true
-    # - docker run -d --name=test-debian11 --privileged --cgroup-parent=docker.slice --cgroupns private build-debian11
-    - docker run -d --name=test-debian11 --cgroupns host --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw build-debian11
+    - docker run -d --name=test-debian11 --cgroupns=host --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw test-build
     - docker exec test-debian11 systemctl --version
     - docker stop test-debian11 && docker rm test-debian11
 
