--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 ---
 stages:
-  - check
   - test
   - push
 
@@ -13,43 +12,22 @@ variables:
   DOCKERHUB_USER: lotusnoir
   GITHUB_USER: lotusnoir
 
-
-##################################################
-# CHECKS
-##################################################
-yamllint:
-  stage: check
-  image: sdesbure/yamllint
-  before_script:
-    - yamllint --version
-  script:
-    - yamllint .
-
-hadolint:
-  stage: check
-  image: hadolint/hadolint:latest-debian
-  before_script:
-    - hadolint --version
-  script:
-    - hadolint Dockerfile
-
-
 ##################################################
 # TEST BUILD
 ##################################################
 test_build:
   stage: test
   image: docker:latest
-  needs: ["yamllint", "hadolint"]
-  services:
-    - docker:dind
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      changes:
+        - Dockerfile
   script:
     - docker build -t test-build-${OS_TYPE} .
     - docker stop test-${OS_TYPE} || true && docker rm test-${OS_TYPE} || true
     - docker run -d --name=test-${OS_TYPE} --cgroupns=host --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw test-build-${OS_TYPE}
     - docker exec test-${OS_TYPE} systemctl --version
     - docker stop test-${OS_TYPE} && docker rm test-${OS_TYPE}
-
 
 ##################################################
 # PUSH CODE AND IMAGE
@@ -58,8 +36,6 @@ test_build:
 #  stage: push
 #  image: docker:latest
 #  needs: ["test_build"]
-#  services:
-#    - docker:dind
 #  before_script:
 #    - docker info
 #    - echo "${CI_REGISTRY_USER} ${CI_REGISTRY_TOKEN} ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}"
@@ -71,9 +47,11 @@ test_build:
 push_img_on_dockerhub:
   stage: push
   image: docker:latest
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      changes:
+        - Dockerfile
   needs: ["test_build"]
-  services:
-    - docker:dind
   before_script:
     - docker info
     - docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_TOKEN}"
@@ -84,6 +62,10 @@ push_img_on_dockerhub:
 push_src_on_github:
   stage: push
   image: alpine:latest
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      changes:
+        - Dockerfile
   needs: ["test_build"]
   before_script:
     - apk add git openssh-client
